--- a/ConsoleTest001/ConsoleTest001/ConsoleTest001.csproj
+++ b/ConsoleTest001/ConsoleTest001/ConsoleTest001.csproj
@@ -44,6 +44,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Classes\Database.cs" />
+    <Compile Include="Classes\Entity.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
